# boot_shutdown_tools

./: README.md
boot_shutdown_api_msgs/: CMakeLists.txt  package.xml
boot_shutdown_api_msgs/msg/: EcuState.msg  ShutdownReadyState.msg
boot_shutdown_api_msgs/srv/: ExecuteShutdown.srv  PrepareShutdown.srv  Shutdown.srv
boot_shutdown_common/include/boot_shutdown_common/: parameter.hpp
boot_shutdown_communication/: CMakeLists.txt  package.xml
boot_shutdown_communication/include/boot_shutdown_communication/: service_client.hpp  service_server.hpp  topic_publisher.hpp  topic_subscriber.hpp  utility.hpp
boot_shutdown_interface/: CMakeLists.txt  README.md  package.xml
boot_shutdown_interface/config/: boot_shutdown.param.yaml  topic_config.param.yaml
boot_shutdown_interface/include/boot_shutdown_interface/: boot_shutdown_guest.hpp  boot_shutdown_interface.hpp  boot_shutdown_interface_core.hpp
boot_shutdown_interface/include/boot_shutdown_interface/service/: boot_shutdown_common.hpp  boot_shutdown_interface.hpp  boot_shutdown_service.hpp
boot_shutdown_interface/launch/: boot_shutdown.launch.xml  boot_shutdown_guest.launch.xml
boot_shutdown_interface/src/: boot_shutdown_guest.cpp  boot_shutdown_host.cpp  boot_shutdown_interface.cpp  boot_shutdown_interface_core.cpp  boot_shutdown_interface_node.cpp
boot_shutdown_interface/src/service/: boot_shutdown_main.cpp  boot_shutdown_service.cpp
boot_shutdown_internal_msgs/: CMakeLists.txt  package.xml
boot_shutdown_internal_msgs/include/boot_shutdown_internal_msgs/msg/: ecu_state_message.hpp  response_status.hpp
boot_shutdown_internal_msgs/include/boot_shutdown_internal_msgs/srv/: execute_shutdown_service.hpp  prepare_shutdown_service.hpp
boot_shutdown_internal_msgs/proto/boot_shutdown_internal_msgs/msg/: ecu_state_message.proto  header.proto  response_status.proto
boot_shutdown_internal_msgs/proto/boot_shutdown_internal_msgs/srv/: execute_shutdown_service.proto  prepare_shutdown_service.proto
boot_shutdown_manager/: CMakeLists.txt  README.md  package.xml
boot_shutdown_manager/config/: boot_shutdown_manager.param.yaml
boot_shutdown_manager/include/boot_shutdown_manager/: boot_shutdown_manager.hpp  boot_shutdown_manager_core.hpp
boot_shutdown_manager/include/topic_condition_evaluator/: topic_condition_evaluator.hpp  topic_config.hpp  topic_config_parser.hpp
boot_shutdown_manager/launch/: boot_shutdown_manager.launch.xml
boot_shutdown_manager/src/: boot_shutdown_manager.cpp  boot_shutdown_manager_core.cpp  boot_shutdown_manager_node.cpp
boot_shutdown_manager/src/topic_condition_evaluator/: topic_condition_evaluator.cpp  topic_config_parser.cpp
boot_shutdown_manager/test/: boot_shutdown_manager_test.cpp
boot_shutdown_manager/test/src/: test_boot_shutdown_manager.cpp
boot_shutdown_service/: CMakeLists.noros2  CMakeLists.ros2  CMakeLists.txt  README.md  package.xml
boot_shutdown_service/cmake/: boot_shutdown_serviceConfig.cmake
boot_shutdown_service/include/boot_shutdown_service/: boot_shutdown_common.hpp  boot_shutdown_service.hpp  parameter.hpp
boot_shutdown_service/src/: boot_shutdown_main.cpp  boot_shutdown_service.cpp
boot_shutdown_udp/: CMakeLists.txt  package.xml
boot_shutdown_udp/cmake/: boot_shutdown_udpConfig.cmake
boot_shutdown_udp/include/boot_shutdown_udp/: service_client.hpp  service_server.hpp  topic_publisher.hpp  topic_subscriber.hpp
docker/: Dockerfile  overlay.repos
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/boot_shutdown_api_msgs/include/boot_shutdown_api_msgs/msg/: ecu_state.h  ecu_state.hpp  ecu_state_summary.h  ecu_state_summary.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/boot_shutdown_api_msgs/include/boot_shutdown_api_msgs/srv/: execute_shutdown.h  execute_shutdown.hpp  prepare_shutdown.h  prepare_shutdown.hpp  shutdown.h  shutdown.hpp
install/boot_shutdown_api_msgs/share/boot_shutdown_api_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/boot_shutdown_api_msgs/share/boot_shutdown_api_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  boot_shutdown_api_msgsConfig-version.cmake  boot_shutdown_api_msgsConfig.cmake  boot_shutdown_api_msgs__rosidl_generator_cExport-release.cmake  boot_shutdown_api_msgs__rosidl_generator_cppExport.cmake  boot_shutdown_api_msgs__rosidl_typesupport_cExport.cmake  boot_shutdown_api_msgs__rosidl_typesupport_cppExport.cmake  boot_shutdown_api_msgs__rosidl_typesupport_introspection_cExport-release.cmake  boot_shutdown_api_msgs__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake  (+3 more)
install/boot_shutdown_interface/include/boot_shutdown_interface/: boot_shutdown_guest.hpp  boot_shutdown_interface.hpp  boot_shutdown_interface_core.hpp
install/boot_shutdown_interface/lib/boot_shutdown_interface/: boot_shutdown_guest  boot_shutdown_interface  boot_shutdown_service
install/boot_shutdown_interface/share/boot_shutdown_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
localhost_shutdown/: CMakeLists.txt  README.md  package.xml
localhost_shutdown/cmake/: localhost_shutdownConfig.cmake
localhost_shutdown/include/localhost_shutdown/: localhost_shutdown.hpp
localhost_shutdown/src/: localhost_shutdown.cpp  localhost_shutdown_main.cpp
log/: latest_build
proto_boot_shutdown_interface/: CMakeLists.txt  README.md  package.xml
proto_boot_shutdown_interface/config/: proto_boot_shutdown.param.yaml
proto_boot_shutdown_interface/launch/: proto_boot_shutdown.launch.xml
proto_boot_shutdown_interface/scripts/: proto_boot_shutdown_interface_node.py
(+90 files in other folders)
