<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boot_shutdown_manager</name>
  <version>0.1.0</version>
  <description>The boot_shutdown_manager package</description>
  <maintainer email="shinnosuke.hirakawa@tier4.jp">Shinnosuke Hirakawa</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>boot_shutdown_api_msgs</depend>
  <depend>fmt</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>
  <depend>tier4_api_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
