<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boot_shutdown_service</name>
  <version>0.1.0</version>
  <description>The boot_shutdown_service package</description>
  <maintainer email="masaki.nishikawa@tier4.jp">Masaki Nishikawa</maintainer>
  <maintainer email="fumihito.ito@tier4.jp">Fumihito Ito</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>boot_shutdown_internal_msgs</depend>

  <depend>boost</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
