<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proto_boot_shutdown_interface</name>
  <version>0.1.0</version>
  <description>The proto_boot_shutdown_interface package</description>
  <maintainer email="shinnosuke.hirakawa@tier4.jp">Shinnosuke Hirakawa</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>autoware_ad_api_msgs</depend>
  <depend>boot_shutdown_api_msgs</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
